[package]
name = "oura"
description = "The tail of Cardano"
version = "2.0.0-alpha.2"
edition = "2021"
repository = "https://github.com/txpipe/oura"
homepage = "https://github.com/txpipe/oura"
documentation = "https://docs.rs/oura"
license = "Apache-2.0"
readme = "README.md"
authors = ["Santiago Carmuega <santiago@carmuega.me>"]

[features]
deno = ["deno_runtime"]
sink-file-rotate = ["file-rotate"]
sink-webhook = ["reqwest"]
sink-rabbitmq = ["lapin"]
sink-kafka = ["kafka"]
sink-aws-sqs = ["aws-config", "aws-types", "aws-sdk-sqs"]
sink-aws-lambda = ["aws-config", "aws-types", "aws-sdk-lambda"]
sink-aws-s3 = ["aws-config", "aws-types", "aws-sdk-s3"]
sink-gcp-pubsub = ["google-cloud-pubsub", "google-cloud-googleapis", "google-cloud-default"]
sink-gcp-cloudfunction = ["reqwest", "jsonwebtoken"]
sink-redis = ["r2d2_redis"]
sink-elasticsearch = ["elasticsearch"]
source-utxorpc = ["tonic", "futures"]
sql = ["sqlx"]

[dependencies]
pallas = "0.21.0"
# pallas = { path = "../pallas/pallas" }
# pallas = { git = "https://github.com/txpipe/pallas" }

gasket = { version = "^0.6", features = ["derive"] }
# gasket = { path = "../../construkts/gasket-rs/gasket", features = ["derive"] }
# gasket = { git = "https://github.com/construkts/gasket-rs.git", features = ["derive"] }

utxorpc = { version = "1.0.0-alpha.1" }
hex = "0.4.3"
net2 = "0.2.37"
bech32 = "0.9.1"
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
crossterm = "0.26"
merge = "0.1.0"
config = { version = "0.13.2", default-features = false, features = ["toml", "yaml", "json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.104", features = ["arbitrary_precision"] }
strum = "0.24"
strum_macros = "0.25"
prometheus_exporter_base = { version = "1.4.0", features = ["hyper", "hyper_server"] }
unicode-truncate = "0.2.0"
thiserror = "1.0.39"
indicatif = "0.17.3"
lazy_static = "1.4.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = "1.0.77"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
async-trait = "0.1.68"
elasticsearch = { version = "8.5.0-alpha.1", optional = true }
murmur3 = { version = "0.5.2", optional = true }
openssl = { version = "0.10", optional = true, features = ["vendored"] }
lapin = { version = "2.2.1", optional = true }
reqwest = { version = "0.11", features = ["json", "multipart"], optional = true }
kafka = { version = "0.9.0", optional = true }
google-cloud-pubsub = { version = "0.16.0", optional = true }
google-cloud-googleapis = { version = "0.10.0", optional = true }
google-cloud-default = { version = "0.4.0", optional = true, features = ["pubsub"] }
r2d2_redis = { version = "0.14.0", optional = true }
deno_runtime = { version = "0.126.0", optional = true }
jsonwebtoken = { version = "8.3.0", optional = true }
file-rotate = { version = "0.7.5", optional = true }
tonic = { version = "0.10.2", features = ["tls", "tls-roots"], optional = true }
futures = { version = "0.3.28", optional = true }

# sql
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "any", "sqlite"], optional = true }

# aws
aws-config = { version = "^1.1", optional = true }
aws-types = { version = "^1.1", optional = true }
aws-sdk-s3 = { version = "^1.1", optional = true }
aws-sdk-sqs = { version = "^1.1", optional = true }
aws-sdk-lambda = { version = "^1.1", optional = true }
handlebars = "5.1.1"
