[package]
name = "oura-lib-example"
version = "0.1.0"
edition = "2024"

[dependencies]
oura = { git = "https://github.com/txpipe/oura.git" }

async-trait = "0.1.88"
dotenv = "0.15.0"
gasket = { version = "0.7.0", features = ["derive"] }
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "sqlite"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utxorpc = "0.10.0"
